@@ -13,17 +13,15 @@ sub run {
 
     my @cpu;
     my $current;
-    my $cpuarch = `/bin/arch`;
-    my %cpusocket;
+    my $cpuarch = `arch`;
+    chomp($cpuarch);
+    my $cpusocket;
     my $siblings;
     my $cpucores;
     my $coreid;
 
     open CPUINFO, "</proc/cpuinfo" or warn;
     foreach(<CPUINFO>) {
-	    if (/^physical\sid\s*:\s*(\d+)/i) {
-		    $cpusocket{$1} = $1;
-	    }
 
         if (/^vendor_id\s*:\s*(Authentic|Genuine|)(.+)/i) {
             $current->{MANUFACTURER} = $2;
@@ -32,59 +30,65 @@ sub run {
             $current->{MANUFACTURER} =~ s/CentaurHauls/VIA/;
         }
 
-        $siblings = $1 if /^siblings\s*:\s*(\d+)/i;
-		$cpucores = $1 if /^cpu\scores\s*:\s*(\d+)/i;
+        if (/^siblings\s*:\s*(\d+)/i){
+			$siblings++;
+		}
 		$current->{CURRENT_SPEED} = $1 if /^cpu\sMHz\s*:\s*(\d+)/i;
         $current->{TYPE} = $1 if /^model\sname\s*:\s*(.+)/i;
 	    $current->{L2CACHESIZE} = $1 if /^cache\ssize\s*:\s*(\d+)/i;
-	    #if (/^flags\s*:\s*(.*)/i) {
-        #        my @liste1=split(/ /,$1);
-		#        if (grep /^lm$/,@liste1) {
     }
-    $current->{CPUARCH}=$cpuarch;
-	if ($cpuarch = "x86_64"){
-		$current->{DATA_WIDTH}=64;
-    } else {
-		$current->{DATA_WIDTH}=32;
-    }
-    $current->{NBSOCKET}=scalar keys %cpusocket;
 
-   # /proc/cpuinfo provides real time speed processor.
-   # Get optimal speed with dmidecode command
-   # Get also cpu cores with dmidecode command
-   # Get also voltage information with dmidecode command
-   @cpu = `dmidecode -t processor`;
-   for (@cpu){
-        if (/Current\sSpeed:\s*(.*) (|MHz|GHz)/i){
+	# /proc/cpuinfo provides real time speed processor.
+	# Get optimal speed with dmidecode command
+  	# Get also cpu cores with dmidecode command
+  	# Get also voltage information with dmidecode command
+   	@cpu = `dmidecode -t processor`;
+   	for (@cpu){
+		if (/Processor\sInformation/i){
+			$cpusocket++;
+			$common->addCPU($current) if ($current->{SPEED});
+		}	
+    	if (/Current\sSpeed:\s*(.*) (|MHz|GHz)/i){
             $current->{SPEED} = $1;
-        }
+		}
+		else {
+            $current->{SPEED} = $1;
+		}
         if (/Core\sCount:\s*(\d+)/i){
             $current->{CORES} = $1;
-		} else {
-			$current->{CORES} = $cpucores;
         }
+		else {
+			$current->{CORES} = 'Unknown';
+		}
         if (/Voltage:\s*(.*)V/i){
             $current->{VOLTAGE} = $1;
         }
 		if (/Status:\s*(.*),\s(.*)/i){
             $current->{CPUSTATUS} = $2;
         }
+		else {
+			$current->{CPUSTATUS} = $1;
+		}
         if (/Upgrade:\s*(.*)/i){
             $current->{SOCKET} = $1;
         }
-    }
+    	# Is(Are) CPU(s) hyperthreaded?
+    	if ($siblings = $current->{CORES}) {
+        	# Hyperthreading is off
+        	$current->{HPT}=0;
+    	} else {
+        	# Hyperthreading is on
+        	$current->{HPT}=1;
+    	}
 
-    # Is(Are) CPU(s) hyperthreaded?
-    if ($siblings = $current->{CORES}) {
-        # Hyperthreading is off
-        $current->{HPT}=0;
-    } else {
-        # Hyperthreading is on
-        $current->{HPT}=1;
-    }
+    	$current->{CPUARCH}=$cpuarch;
 
-    # The last one
-    $cpusocket{$current->{NBSOCKET}}=$current;
+		if ($cpuarch eq "x86_64"){
+			$current->{DATA_WIDTH}=64;
+    	} else {
+			$current->{DATA_WIDTH}=32;
+    	}
+    }
 
     # Add the values to XML
     $common->addCPU($current);
