@@ -1,5 +1,8 @@
 Revision history for Ocsinventory::Agent
 
+       * Add new file to detect Oracle distro
+       * Fix CPU.pm which couldn't retrieve multi socket processors
+       * Fix regression (bug #1045356)
        * Fix a mistake in </MACADDR> tag in 6876.xml
        * Move lib/Ocsinventory/Oracle and lib/Ocsinventory/Apache directories in lib/Ocsinventory/agent/Modules directory
        * Fix a mistake in Hooks.pm which makes Download.pm and Snmp.pm not loaded by agent
